syntax = "proto3";

package listing;

option go_package = "/proto";

message GetListingRequest {
  int64 id = 1;
}

message GetListingsInBoundaryRequest {
  double minLng = 1;
  double maxLng = 2;
  double minLat = 3;
  double maxLat = 4;
}

message Listing {
  int64 id = 1;
  string address = 2;
  int64 price = 3;
  double floorArea = 4;
  double lotArea = 5;
  double lng = 6;
  double lat = 7;
}

message GetListingResponse {
  Listing listing = 1;
}

message GetListingsInBoundaryResponse {
  repeated Listing listings = 1;
}

service ListingService {
  rpc GetListing (GetListingRequest) returns (GetListingResponse);
  rpc GetListingsInBoundary (GetListingsInBoundaryRequest) returns (GetListingsInBoundaryResponse);
}
